[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Ball.gd" type="Script" id=1]
[ext_resource path="res://textures/pinball_ball.png" type="Texture" id=2]
[ext_resource path="res://audio/rollsound.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 0.93

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 18.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[node name="Ball" type="RigidBody2D"]
physics_material_override = SubResource( 2 )
continuous_cd = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
bounce_force = 0.975
delayed = false

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="check" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="check"]
shape = SubResource( 3 )

[node name="Sprite" type="TextureRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -40.0
margin_right = 32.0
margin_bottom = -26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 1.0
value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="launch_shower" type="Polygon2D" parent="."]
show_behind_parent = true
color = Color( 0.109804, 0.109804, 0.109804, 0.623529 )
polygon = PoolVector2Array( 0, -48, -8, -64, 0, -96, 8, -64 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="check" to="." method="_on_check_area_entered"]
[connection signal="body_entered" from="check" to="." method="_on_check_body_entered"]
[connection signal="body_exited" from="check" to="." method="_on_check_body_exited"]
